--- a/pbl/interface/templates/minhas_reservas.html
+++ b/pbl/interface/templates/minhas_reservas.html
@@ -1,33 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PASSCOM - Minhas Reservas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
-        <h2>Minhas Reservas</h2>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Trecho</th>
-                    <th>Poltrona</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for reserva in reservas %}
-                <tr>
-                    <td>{{ reserva.trecho }}</td>
-                    <td>{{ reserva.poltrona }}</td>
-                    <td>{{ reserva.status }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <a href="{{ url_for('index') }}" class="btn btn-link">Voltar à Página Inicial</a>
-    </div>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Minhas Reservas{% endblock %}
+
+{% block content %}
+<h2>Minhas Reservas</h2>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Trecho</th>
+            <th>Poltrona</th>
+            <th>Servidor</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for reserva in reservas %}
+        <tr>
+            <td>{{ reserva.trecho }}</td>
+            <td>{{ reserva.poltrona }}</td>
+            <td>{{ reserva.servidor }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+<a href="{{ url_for('index') }}" class="btn btn-link">Voltar à Página Inicial</a>
+{% endblock %}
