--- a/pbl/interface/templates/viagens.html
+++ b/pbl/interface/templates/viagens.html
@@ -25,5 +25,5 @@
     </tbody>
 </table>
 
-<a href="{{ url_for('visualizar_reservas') }}" class="btn btn-success mt-3">Minhas Reservas</a>
+<a href="{{ url_for('minhas_reservas') }}" class="btn btn-success mt-3">Minhas Reservas</a>
 {% endblock %}
